# GpuSwitcherFor-XPS15-9570

./: CMakeLists.txt  README.md  gpu.c  gpud.c  gpud.service  user.conf
